--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Pikero | Cart</title>
 </head>
 <body>
+    <nav>
+        <a href="#">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
+        <div class="business">Mi Tienda</div>
+    </nav>
     <div class="container"></div>
 </body>
 <script src="src/js/index.js" async></script>
