modal list was added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="#">
+        <a href="#" class="modal-open">
             <span></span>
             <span></span>
             <span></span>
@@ -17,6 +17,13 @@
         <div class="business">Mi Tienda</div>
     </nav>
     <div class="container"></div>
+    <footer>&copy Powered by Gary Yaral </footer>
+    <!-- Script-->
+    <script src="src/js/index.js" async></script>
+    <!--Modal category-->
+    <div class="modal-category modal-hidden">
+        <button class="modal-close">X</button>
+        <ul class="modal-list"></ul>
+    </div>
 </body>
-<script src="src/js/index.js" async></script>
 </html>
